Authenticate requests against role names
Bump version to 1.2.0, to indicate work in R2
Split configuration URLs into prefix and suffix

Change-Id: I4673fb56e1e43e1b1a9217fdd523c174ab1487fc
Signed-off-by: Lott, Christopher (cl778h) <cl778h@att.com>